--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -5,12 +5,13 @@
 
 {% block body %}
     <div class="container mt-4">
+    {% if not ingredients.items is same as([]) %}
         <h1>Mes ingrédients</h1>
 
 <div class="count mt-4">
-    <h4>Il y a 
+    Il y a 
     {{ ingredients.getTotalItemCount }} 
-    ingrédients au total</h4>
+    ingrédients
 </div>
         <table class="table table-hover">
             <thead>
@@ -37,5 +38,8 @@
         <div class="navigation d-flex justify-content-center mt-4">
         {{ knp_pagination_render(ingredients) }}
         </div>
+        {% else %}
+        <h4>Il n'y a pas d'ingredients</h4>
+        {% endif %}
     </div>
 {% endblock %}
